Added deny all for git and svn repos

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -76,6 +76,12 @@ http {
             access_log off;
         }
 
+        location = /(.git|.svn) {
+            deny all;
+            log_not_found off;
+            access_log off;
+        }
+
         location /api {
 	    try_files $uri @api;
         }
