--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,8 +22,8 @@ http {
 
     access_log  /var/log/nginx/access.log  main;
 
-    sendfile       off;
-    tcp_nopush     on;
+    sendfile           off;
+    tcp_nopush         on;
     keepalive_timeout  80;
     tcp_nodelay        off;
 
@@ -51,7 +51,7 @@ http {
         client_max_body_size 900m;
         location / {
             root   /opt/repos;
-	    autoindex on;
+	          autoindex on;
             expires modified +90d;
         }
 
@@ -60,40 +60,46 @@ http {
             access_log off;
         }
 
-	location ~* \.(jpg|jpeg|gif|png|bmp|ico|pdf|flv|swf|exe) {
+	      location ~* \.(jpg|jpeg|gif|png|bmp|ico|pdf|flv|swf|exe) {
             log_not_found off;
             access_log off;
-	}
+	      }
 
-	location = /404.html {
+	      location = /404.html {
             log_not_found off;
             access_log off;
         }
- 
+
         location = /robots.txt {
             deny all;
             log_not_found off;
             access_log off;
         }
 
-        location = /(.git|.svn) {
+        location = /(.git|.svn|README.md) {
             deny all;
             log_not_found off;
             access_log off;
         }
 
         location /api {
-	    try_files $uri @api;
+	          try_files $uri @api;
         }
 
         location @api {
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $http_host;
+            proxy_pass http://127.0.0.1:8888;
             proxy_redirect off;
             proxy_buffering off;
-            proxy_pass http://127.0.0.1:8888;
+
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
         }
-  
+
     }
 
 }
