--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Flask==0.10.1
-Werkzeug==0.9.6
-gunicorn==19.1.1
+Flask-Limiter==0.7.9
+Werkzeug==0.10.4
+gunicorn==19.3.0
 python-magic==0.4.6
-SQLAlchemy==0.9.8
+SQLAlchemy==1.0.6
+PyYAML==3.11
