--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 daemon off;
 user nginx;
-worker_processes 2;
+worker_processes auto;
 worker_rlimit_nofile 65536;
 
 error_log  /var/log/nginx/error.log;
@@ -10,6 +10,7 @@ pid        /var/run/nginx.pid;
 events {
     worker_connections  8192;
     multi_accept on;
+    use epoll;
 }
 
 http {
@@ -21,16 +22,24 @@ http {
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log  /var/log/nginx/access.log  main;
-
+    
+    server_tokens      off;
     sendfile           off;
     tcp_nopush         on;
-    keepalive_timeout  80;
+    keepalive_timeout  300;
+    keepalive_requests 100000;
     tcp_nodelay        off;
+    reset_timedout_connection on;
+    
+    open_file_cache max=200000 inactive=5m; 
+    open_file_cache_valid 5m; 
+    open_file_cache_min_uses 2;
+    open_file_cache_errors off;
 
     gzip  on;
     gzip_http_version  1.1;
     gzip_comp_level    5;
-    gzip_min_length    1000;
+    gzip_min_length    10000;
     gzip_proxied       any;
     gzip_vary          on;
     gzip_types
