--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==0.10.1
-Flask-Limiter==0.7.9
-Werkzeug==0.10.4
-gunicorn==19.3.0
-python-magic==0.4.6
-SQLAlchemy==1.0.6
+Flask-Limiter==0.9.3
+Flask==0.11
 PyYAML==3.11
+SQLAlchemy==1.0.13
+Werkzeug==0.11.10
+gunicorn==19.6.0
+psutil==4.2.0
+python-magic==0.4.11
