--- a/supervisor/yumapi.ini
+++ b/supervisor/yumapi.ini
@@ -3,12 +3,14 @@ logfile=/var/log/supervisor/supervisor.log ; (main log file;default $CWD/supervi
 logfile_maxbytes=10MB        ; (max main logfile bytes b4 rotation;default 50MB)
 loglevel=info                ; (log level;default info; others: debug,warn,trace)
 pidfile=/var/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
+nodaemon=true
 
-[rpcinterface:supervisor]
-supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
-
-[supervisorctl]
-serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
-
-[include]
-files = /etc/supervisord.d/*.conf
+[program:yumapi]
+command = /opt/yum-nginx-api/yumapi/yumapi.sh
+priority= 1
+user = root
+stdout_logfile = /var/log/yumapi.log
+redirect_stderr = true
+autostart = true
+autorestart = true
+startretries = 20
