Handle system cmds in buffer routine and better status codes

--- a/yumapi/Makefile
+++ b/yumapi/Makefile
@@ -25,3 +25,7 @@ clean:
 
 config:
 	printf "upload_dir: .\ndev_mode: true" > yumapi.yaml
+
+docker: build
+	printf "upload_dir: /repo\n" > yumapi.yaml
+	docker build -t finraos/yum-nginx-api .
