--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,20 @@
-version: "2"
+version: '3'
 services:
   nginx:
     image: nginx:latest
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/mime.types:/etc/nginx/mime.types
-      - /opt/repos:/opt/repos
-    ports:
-      - "80:80"
+      - /opt/repos:/repo
     network_mode: host
     restart: always
   yumapi:
     image: finraos/yum-nginx-api:latest
-    network_mode: host
+    network_mode: bridge
     restart: always
     volumes:
-      - /opt/repos:/opt/repos
+      - /opt/repos:/repo
     ports:
-      - "8888:8888"
+      - "8080:8080"
     depends_on:
       - nginx
