--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,10 +15,8 @@ events {
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
-
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format  main  '$time_iso8601 [$remote_addr] [$request_time ms] $request '
+                      '$status $body_bytes_sent "$http_user_agent"';
 
     access_log  /var/log/nginx/access.log  main;
 
