Change build to work with circleci 2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,15 +5,16 @@ jobs:
       - image: circleci/golang:1.9.1
     working_directory: /go/src/github.com/FINRAOS/yum-nginx-api
     steps:
+      - setup_remote_docker
       - run: git clone https://github.com/FINRAOS/yum-nginx-api.git -b go-rewrite .
       - run:
-          shell: /bin/sh
+          shell: /bin/bash
           command: |
             cd yum-nginx-api
             make build
             make docker
       - run:
-          shell: /bin/sh
+          shell: /bin/bash
           command: |
             docker login -u $DOCKER_USER -p $DOCKER_PASS
             docker push finraos/yum-nginx-api:latest
