--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: |
             mkdir -p $TEST_RESULTS
             curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.34.1
-            go get -u github.com/golangci/golangci-lint/cmd/golangci-lint
+            go get -u golang.org/x/lint/golint
             go get github.com/jstemmer/go-junit-report
             make lint
             make test | go-junit-report > ${TEST_RESULTS}/go-test-report.xml
